@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10906] "warning fra setPIDInTaskpackageRecordStructure i ESHarvest"
    - bug [10939] "alle plugins skal have et pluginenvironment"
    - bug [11010] "Verificer at ImmutablePair lever op til sit navn"
    - bug [11029] "ForceFedoraPid plugin skal stå før XMLDCHarvester i workflows.xml"
